Mon Feb  4 23:31:34 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * docs/design/deadline.txt:
        * docs/design/durability.txt:
        * docs/design/federation.txt:
        * docs/design/lifespan.txt:

	  Adding design documentation for features we will be adding on
	  this branch.

Mon Feb  4 20:24:40 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Explicitly do not use an argument when not implementing
          BuiltinTopics.

        * tests/DCPS/MultiRepoTest/TestSystem.cpp:

          Comparisons between _var.in() rather than _var.

Thu Jan 31 20:22:48 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/MultiRepoTest/TestConfig.cpp:

          Prefixed anonymous-namespace constant names with TC_ (Test Config)
          since DEFAULT_TYPE was conflicting with a macro on gcc 3.3/solaris.

Thu Jan 31 20:15:18 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * bin/auto_run_tests.pl:

          Always run Perl scripts as "perl scriptname.pl", since that works on
          all platforms.
          Check return values against != 0 instead of > 0.

        * dds/DCPS/Service_Participant.cpp:

          Changed bit_transport_impl signature to match header file.

Thu Jan 31 17:31:22 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>

        * tests/DCPS/MultiRepoTest/TestConfig.cpp:
          Explicit include for ACE_OS::atoi().

        * tests/DCPS/MultiRepoTest/run_test.pl:
          Removed extraneous command line option.

Wed Jan 30 19:51:02 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/MultiRepoTest/ForwardingListener.cpp:

          Need to lock the mutex before waiting on the condition variable.

        * tests/DCPS/MultiRepoTest/TestMonitor.cpp:

          Fixed floating point conversion warnings, added some logging.

        * tests/DCPS/MultiRepoTest/monitor.cpp:
        * tests/DCPS/MultiRepoTest/system.cpp:
